fix charts flex alignment

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -758,7 +758,7 @@ td {
     width: 25%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .charts-section-2{
